📦 Module 2: SDK et Outils - Installation et configuration complète